# toolshed

./: .mise.toml  CLAUDE.md  Cargo.toml  docker-compose.yml
agents/claude/: toolshed.md
agents/pi/toolshed/: SKILL.md
agents/toolshed/: SKILL.md
agents/toolshed/references/: PROTOCOL.md
gitlab/: docker-compose.yml
sourcegraph/: docker-compose.yml
src/: agent.rs  audit.rs  cli.rs  config.rs  env.rs  error.rs  frontmatter.rs  health.rs  main.rs  manifest.rs  output.rs  registry.rs  rule.rs  serve.rs  skill.rs  workflow.rs
src/mcp/: http.rs  introspect.rs  mod.rs  protocol.rs  stdio.rs
src/runner/: mcp.rs  mod.rs  native.rs
tests/: integration_test.rs
tests/fixtures/: mcp_server_mock.py
tests/fixtures/agents/test-agent/: AGENT.md
tests/fixtures/rules/test-rule/: RULE.md
tests/fixtures/skills/test-skill/: SKILL.md
tests/fixtures/tools/echo/: run  tool.json
tests/fixtures/tools/failing/: tool.json
tools/batch-changes/: README.md  run  tool.json
tools/code-insights/: README.md  run  tool.json
tools/code-monitor/: README.md  run  tool.json
tools/code-owners/: README.md  run  tool.json
tools/huly/: tool.json
tools/narsil/: run  tool.json
tools/sourcegraph/: README.md  run  tool.json
tools/sourcegraph/modules/: code-insights  code-intel  code-monitor  core  deepsearch  deepsearch-read  sg-audit  sg-auth  sg-external-svc  sg-notebooks  sg-prompts  sg-rbac  sg-stream  sg-webhooks
tools/vault/: tool.json
toolshed/: docker-compose.yml
vault/: docker-compose.yml  entrypoint.sh  start.sh
(+2 files in other folders)
